# Sutram

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/app/: dependencies.py  main.py  settings.py
services/api-gateway/app/middleware/: auth.py
services/api-gateway/app/routes/: health.py  proxy.py
services/api-gateway/tests/: conftest.py
services/api-gateway/tests/integration/: test_proxy.py
services/api-gateway/tests/unit/: test_auth_middleware.py  test_dependencies.py  test_main.py  test_settings.py
services/memory-service/: Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml
services/memory-service/alembic/: env.py
services/memory-service/alembic/versions/: 001_initial_schema.py  002_force_rls.py
services/memory-service/app/: dependencies.py  main.py  settings.py
services/memory-service/app/compression/: archiver.py  compressor.py
services/memory-service/app/models/: orm.py
services/memory-service/app/retrieval/: embedder.py  reranker.py  searcher.py
services/memory-service/app/routes/: memory.py
services/memory-service/app/schemas/: memory.py
services/memory-service/app/tasks/: celery_app.py  compress.py
services/memory-service/tests/: conftest.py
services/memory-service/tests/integration/: test_memory_routes.py
services/memory-service/tests/unit/: test_celery_tasks.py  test_compressor.py  test_main.py  test_orm_models.py  test_settings.py
services/observability-service/: Dockerfile  alembic.ini  pyproject.toml
services/observability-service/alembic/: env.py
services/observability-service/alembic/versions/: 001_initial_schema.py
services/observability-service/app/: dependencies.py  main.py  settings.py
services/observability-service/app/consumer/: dispatcher.py  handler.py  loop.py
services/observability-service/app/metrics/: prometheus.py
services/observability-service/app/models/: orm.py
services/observability-service/app/routes/: audit.py  metrics_api.py  traces.py
services/observability-service/app/sampling/: tail_sampler.py
services/observability-service/tests/: conftest.py
services/observability-service/tests/integration/: test_routes.py
services/observability-service/tests/unit/: test_dispatcher.py  test_main.py  test_orm_models.py  test_prometheus.py  test_settings.py  test_tail_sampler.py
services/workflow-service/: Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml
services/workflow-service/alembic/: env.py
services/workflow-service/alembic/versions/: 001_initial_schema.py  002_force_rls.py  003_execution_definition_snapshot.py
services/workflow-service/app/: dependencies.py  main.py  settings.py
services/workflow-service/app/engine/: checkpoint.py  cost_tracker.py  executor.py  recovery.py  state_machine.py
services/workflow-service/app/models/: orm.py
services/workflow-service/app/tasks/: execute.py  (+2 more)
services/workflow-service/tests/: conftest.py
(+39 files in other folders)
