[project]
name = "observability-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sutram-core",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "fakeredis>=2.20",
    "fakeredis[lua]>=2.20",
    "aiosqlite>=0.19",
]

[tool.uv.sources]
sutram-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
