[project]
name = "workflow-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sutram-core",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "celery[redis]>=5.4",
    "alembic>=1.13",
    "cryptography>=42.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "httpx>=0.26",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.26",
    "fakeredis>=2.20",
    "fakeredis[lua]>=2.20",
    "aiosqlite>=0.19",
]

[tool.uv.sources]
sutram-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
